PLT-4498 Fix .user-popover overflow bug on mobile

--- a/webapp/sass/responsive/_mobile.scss
+++ b/webapp/sass/responsive/_mobile.scss
@@ -1276,14 +1276,6 @@
                     height: auto;
                 }
             }
-
-            .post__header {
-                .col__name {
-                    .user-popover {
-                        max-width: 100%;
-                    }
-                }
-            }
         }
     }
 
